--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ project(sorter_all)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
 
+enable_testing()
+add_test(AutoTests ${EXECUTABLE_OUTPUT_PATH}/test_auto)
+
 add_subdirectory(generator)
 add_subdirectory(sorter)
 add_subdirectory(tester)
+add_subdirectory(tests)
