--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ set(EXECUTABLE_OUTPUT_PATH ../)
 include_directories(../)
 
 set(Boost_USE_MULTITHREAD ON)
-find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+find_package(Boost COMPONENTS timer system unit_test_framework REQUIRED)
 if(NOT Boost_FOUND)
   message(SEND_ERROR "Failed to find Boost libraries")
   return()
@@ -28,4 +28,8 @@ add_executable(test_auto
   test_auto.cpp
   ../sorter/info_container.cpp)
 
+add_executable(test_input_buffer 
+  test_input_buffer.cpp)
+
 target_link_libraries(test_auto ${Boost_LIBRARIES} ${LOG4CPP_LIBRARIES})
+target_link_libraries(test_input_buffer ${Boost_LIBRARIES} ${LOG4CPP_LIBRARIES})
